# ETSP

./: .gitignore  Colab_Run.ipynb  README.md  environment.yml  main.py  pyproject.toml
docs/: IMPLEMENTATION.md
report/: main.tex  references.bib
src/: audio_processor.py  config.py  data_loader.py  metrics.py  models.py  trainer.py
